# natural_language_autoencoders

./: CLAUDE.md  LICENSE  README.md  nla_inference.py  pyproject.toml
configs/: TRAINING_NOTES.md  actor_sft.sh  critic_sft.sh  rl.sh
configs/datagen/: gemma3_12b_ultrafineweb_100k.yaml  gemma3_12b_ultrafineweb_1k.yaml  gemma3_27b_ultrafineweb_100k.yaml  gemma3_27b_ultrafineweb_1k.yaml  llama70b_ultrafineweb_100k.yaml  llama70b_ultrafineweb_1k.yaml  quick_test_10docs.yaml  qwen7b_fineweb_1M.yaml  qwen7b_ultrafineweb_100k.yaml
docs/: design.md  inference.md  setup.md
examples/: gemma12b_layer32_step4000.txt  gemma27b_layer41_step6000.txt  llama70b_layer53_step2424.txt  qwen7b_layer20_step4200.txt
nla/: _sglang_sft_stubs.py  arch_adapters.py  config.py  data_source.py  embed_store.py  injection.py  loss.py  models.py  reward.py  schema.py  storage.py  tis_metrics.py  train_actor.py
nla/datagen/: README.md  _common.py  cast_to_fixed_size_list.py  extractors.py  injection_token_cache.yaml  injection_tokens.py  merge_base.py  model_presets.py  prompt_cache.py  providers.py  recover_explained.py  run_pipeline.py  shuffle_activations.py  sidecar.py  stage0_extract.py  stage1_split.py  (+5 more)
patches/: CHUNKED_PREFILL_FIX.md  apply_sglang_patches.sh  fix_fused_adam_oom.py  nla_gemma3_mm_input_embeds.patch  nla_input_embeds.patch  nla_input_embeds_b64.patch  nla_sglang_input_embeds_chunked_prefill_fix.patch  nla_sglang_input_embeds_retract_fix.patch
release/: hf_stage_and_scrub.py
tools/: convert_fsdp_to_hf.py  convert_hf_to_torch_dist.py  convert_torch_dist_to_hf.py
(+20 files in other folders)
